# mbot_ruvector

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/agents/: README.md  auto-verifier.md  ci-contract-debugger.md  contract-orchestrator.md  contract-verifier.md  journey-enforcer.md  playwright-from-specflow.md  specflow-writer.md  test-generator.md
crates/mbot-companion/: Cargo.toml
crates/mbot-companion/src/: main.rs  protocol.rs  transport.rs
crates/mbot-core/: Cargo.toml
crates/mbot-core/src/: lib.rs
crates/mbot-embedded/: Cargo.toml
crates/mbot-embedded/src/: lib.rs
web/: package.json  server.js
web/public/: index.html
