[workspace]
resolver = "2"
members = [
    "crates/mbot-core",
    "crates/mbot-companion",
    "crates/mbot-embedded",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Hulupeep/mbot_ruvector"
authors = ["Hulupeep"]

[workspace.dependencies]
# RuVector dependencies (path to local ruvector)
ruvector-dag = { path = "../../../tooling/ruvector/crates/ruvector-dag" }
ruvector-core = { path = "../../../tooling/ruvector/crates/ruvector-core" }
sona = { path = "../../../tooling/ruvector/crates/sona" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Bluetooth
btleplug = "0.11"

# Serial
serialport = "4.3"

# Utilities
rand = "0.8"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
